Revert "fix skoku pri otevreni okna (schvovávání scrollbaru)"
This reverts commit af86aaf4c4f317933f4b8dfbedf301d1f19942f7.

--- a/development/assets/sass/1_core/_4_reset.scss
+++ b/development/assets/sass/1_core/_4_reset.scss
@@ -25,9 +25,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, main, time {
 	display: block;
 }
-html{
-    -ms-overflow-style: -ms-autohiding-scrollbar;//fix skoku pri otevreni okna
-}
 body {
 	line-height: 1;
 }
